--- a/dashboard.html
+++ b/dashboard.html
@@ -390,7 +390,7 @@
 		<!-- Main Content Section -->
 		<div class="main-content">
 			<div class="btns">
-				<a class="button secondary" href="#" title="প্রিজাইডিং অফিসার তালিকা">
+				<a class="button secondary" href="1_presiding.html" title="প্রিজাইডিং অফিসার তালিকা">
 					<span class="icon">👨‍💼</span>
 					<span>প্রিজাইডিং অফিসার তালিকা</span>
 				</a>
