--- a/dashboard.html
+++ b/dashboard.html
@@ -394,7 +394,7 @@
 					<span class="icon">👨‍💼</span>
 					<span>প্রিজাইডিং অফিসার তালিকা</span>
 				</a>
-				<a class="button secondary" href="2_assistant_presiding.html" title="সহ-প্রিজাইডিং অফিসার তালিকা">
+				<a class="button secondary" href="2_ass_presiding.html" title="সহ-প্রিজাইডিং অফিসার তালিকা">
 					<span class="icon">👨‍💻</span>
 					<span>সহ-প্রিজাইডিং অফিসার তালিকা</span>
 				</a>
