--- a/dashboard.html
+++ b/dashboard.html
@@ -437,18 +437,8 @@
 			// For now, just show success message
 			alert('✅ পাসওয়ার্ড সফলভাবে পরিবর্তন হয়েছে!');
 		}
-		
-		// Logout function
-		function logout() {
-			if (confirm('আপনি কি নিশ্চিত লগ আউট করতে চান?')) {
-				// Clear any stored credentials
-				localStorage.clear();
-				sessionStorage.clear();
-				
-				// Redirect to login page (or home)
-				window.location.href = 'index.html';
-			}
-		}
 	</script>
+	<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+	<script src="authentication.js"></script>
 </body>
 </html>
