--- a/dashboard.html
+++ b/dashboard.html
@@ -402,6 +402,18 @@
 					<span class="icon">📋</span>
 					<span>পোলিং অফিসার তালিকা</span>
 				</a>
+				<a class="button secondary" href="#" title="ট্রেনিং তালিকা">
+					<span class="icon">👨‍💻</span>
+					<span>ট্রেনিং তালিকা</span>
+				</a>
+				<a class="button secondary" href="#" title="ট্রেনিং তালিকা">
+					<span class="icon">👨‍💻</span>
+					<span>নিয়োগপত্রের তালিকা</span>
+				</a>
+				<a class="button secondary" href="#" title="ট্রেনিং তালিকা">
+					<span class="icon">👨‍💻</span>
+					<span>নিয়োগপত্র জেনারেট</span>
+				</a>
 			</div>
 		</div>
 
