--- a/dashboard.html
+++ b/dashboard.html
@@ -400,7 +400,11 @@
 				</a>
 				<a class="button primary" href="3_polling.html">
 					<span class="icon">📋</span>
-					<span>পোলিং অফিসার তালিকা</span>
+					<span>Polling Officer List</span>
+				</a>
+				<a class="button secondary" href="4_vote_centre.html" title="Vote Centres">
+					<span class="icon">👨‍💻</span>
+					<span>Vote Centres</span>
 				</a>
 				<a class="button secondary" href="#" title="ট্রেনিং তালিকা">
 					<span class="icon">👨‍💻</span>
