--- a/dashboard.html
+++ b/dashboard.html
@@ -406,15 +406,15 @@
 					<span class="icon">👨‍💻</span>
 					<span>Vote Centres</span>
 				</a>
-				<a class="button secondary" href="#" title="ট্রেনিং তালিকা">
+				<a class="button secondary" href="training_list.html" title="ট্রেনিং তালিকা">
 					<span class="icon">👨‍💻</span>
 					<span>ট্রেনিং তালিকা</span>
 				</a>
-				<a class="button secondary" href="#" title="ট্রেনিং তালিকা">
+				<a class="button secondary" href="generate/2_centre_edit.html" title="ট্রেনিং তালিকা">
 					<span class="icon">👨‍💻</span>
 					<span>নিয়োগপত্রের তালিকা</span>
 				</a>
-				<a class="button secondary" href="#" title="ট্রেনিং তালিকা">
+				<a class="button secondary" href="generate/1_generate.html" title="ট্রেনিং তালিকা">
 					<span class="icon">👨‍💻</span>
 					<span>নিয়োগপত্র জেনারেট</span>
 				</a>
