--- a/dashboard.html
+++ b/dashboard.html
@@ -374,13 +374,13 @@
 			<div class="user-menu">
 				<div class="user-info">
 					<span class="user-icon">👤</span>
-					<span id="username">Admin User</span>
+					   <span id="username">Loading...</span>
 				</div>
 				<button class="action-btn reset" onclick="changePassword()">
 					<span>🔑</span>
 					<span>Reset Password</span>
 				</button>
-				<button class="action-btn logout" onclick="logout()">
+				   <button class="action-btn logout" data-logout>
 					<span>🚪</span>
 					<span>Logout</span>
 				</button>
@@ -455,6 +455,18 @@
 		}
 	</script>
 	<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-	<script src="authentication.js"></script>
+	 <script src="authentication.js"></script>
+	 <script>
+	 document.addEventListener('DOMContentLoaded', async function() {
+		 if (window.supabaseClient) {
+			 const { data: { session } } = await window.supabaseClient.auth.getSession();
+			 if (session && session.user && session.user.email) {
+				 document.getElementById('username').textContent = session.user.email;
+			 } else {
+				 document.getElementById('username').textContent = 'Unknown User';
+			 }
+		 }
+	 });
+	 </script>
 </body>
 </html>
