--- a/dashboard.html
+++ b/dashboard.html
@@ -424,6 +424,7 @@
 		<!-- Footer Section -->
 		<div class="footer">
 			<p>© 2026 Uno Feni Sadar Election Management System</p>
+			<p>Creator : <a href="z_creator.html">Gopals Diary</a></p>
 		</div>
 	</div>
 
