--- a/1_presiding_edit.html
+++ b/1_presiding_edit.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <title>প্রিজাইডিং অফিসার প্যানেল </title>
+  <link rel="icon" href="data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><rect width='100' height='100' fill='%23667eea'/><text x='50' y='65' font-size='60' text-anchor='middle' fill='white' font-family='Arial'>U</text></svg>">
   <style>
     * {
       box-sizing: border-box;
@@ -807,6 +808,40 @@
   <div class="container">
     <h1>প্রিজাইডিং অফিসার প্যানেল - Edit Table</h1>
   
+  <div class="search-box">
+    <input type="text" id="search-input" placeholder="Search by name, id or mobile number...">
+    <button onclick="searchPolling()">Search</button>
+    <button onclick="clearSearch()" style="background:#ef4444">Clear</button>
+  </div>
+
+  <script>
+    function debounce(fn, wait) {
+      let t;
+      return function(...args) {
+        clearTimeout(t);
+        t = setTimeout(() => fn.apply(this, args), wait);
+      };
+    }
+
+    document.getElementById('search-input').addEventListener('input', debounce(() => {
+      const val = document.getElementById('search-input').value.trim();
+      if (!val) {
+        isSearchMode = false;
+        document.getElementById('error').style.display = 'none';
+        loadPollingData(1);
+        return;
+      }
+      searchPolling();
+    }, 300));
+
+    function clearSearch() {
+      document.getElementById('search-input').value = '';
+      document.getElementById('error').style.display = 'none';
+      isSearchMode = false;
+      loadPollingData(1);
+    }
+  </script>
+
   <div class="action-buttons">
     <button class="add-new-btn" onclick="window.location.href='1_presiding.html'">⬅️ Back</button>
     <div class="filter-checkbox">
