--- a/dashboard.html
+++ b/dashboard.html
@@ -413,11 +413,15 @@
 				</a>
 				<a class="button secondary" href="generate/2_centre_edit.html" title="ট্রেনিং তালিকা">
 					<span class="icon">👨‍💻</span>
-					<span>নিয়োগপত্রের তালিকা</span>
+					<span>Generate Duty List</span>
 				</a>
 				<a class="button secondary" href="generate/1_generate.html" title="ট্রেনিং তালিকা">
 					<span class="icon">👨‍💻</span>
-					<span>নিয়োগপত্র জেনারেট</span>
+					<span>Appointment Letter</span>
+				</a>
+				<a class="button secondary" href="generate/3_duty_finding.html" title="Duty Finding">
+					<span class="icon">👨‍💻</span>
+					<span>Duty finding (Centre)</span>
 				</a>
 			</div>
 		</div>
