--- a/dashboard.html
+++ b/dashboard.html
@@ -413,15 +413,19 @@
 				</a>
 				<a class="button secondary" href="generate/2_centre_edit.html" title="ট্রেনিং তালিকা">
 					<span class="icon">👨‍💻</span>
-					<span>Generate Duty List</span>
+					<span>1. Generate Duty List</span>
+				</a>
+				<a class="button secondary" href="generate/3_vote_centre.html" title="ট্রেনিং তালিকা">
+					<span class="icon">👨‍💻</span>
+					<span>2. Edit Duty List</span>
+				</a>
+				<a class="button secondary" href="generate/4_duty_finding.html" title="Duty Finding">
+					<span class="icon">👨‍💻</span>
+					<span>3. Duty finding (Centre)</span>	
 				</a>
 				<a class="button secondary" href="generate/1_generate.html" title="ট্রেনিং তালিকা">
 					<span class="icon">👨‍💻</span>
-					<span>Appointment Letter</span>
-				</a>
-				<a class="button secondary" href="generate/3_duty_finding.html" title="Duty Finding">
-					<span class="icon">👨‍💻</span>
-					<span>Duty finding (Centre)</span>
+					<span>4. Appointment Letter</span>
 				</a>
 			</div>
 		</div>
