--- a/dashboard.html
+++ b/dashboard.html
@@ -419,7 +419,7 @@
 					<span class="icon">👨‍💻</span>
 					<span>2. Edit Duty List</span>
 				</a>
-				<a class="button secondary" href="generate/4_duty_finding.html" title="Duty Finding">
+				<a class="button secondary" href="generate/4_duty_finding_mobile.html" title="Duty Finding">
 					<span class="icon">👨‍💻</span>
 					<span>3. Duty finding (Centre)</span>	
 				</a>
