--- a/dashboard.html
+++ b/dashboard.html
@@ -423,7 +423,7 @@
 					<span class="icon">👨‍💻</span>
 					<span>3. Duty finding (Centre)</span>	
 				</a>
-				<a class="button secondary" href="generate/1_generate.html" title="ট্রেনিং তালিকা">
+				<a class="button secondary" href="generate/3_vote_centre.html" title="ট্রেনিং তালিকা">
 					<span class="icon">👨‍💻</span>
 					<span>4. Appointment Letter</span>
 				</a>
