--- a/2_ass_presiding.html
+++ b/2_ass_presiding.html
@@ -1401,6 +1401,22 @@
     // State for editing
     let selectedRow = null;
     let isAddMode = false;
+    const preferredFields = [
+      'ass_presiding_iid',
+      'ass_presiding_name',
+      'mobile_number',
+      'gender',
+      'disability',
+      'sallery_scale',
+      'current_grade_sallery',
+      'date_of_birth',
+      'own_discrict',
+      'address',
+      'Nid_number',
+      'previous_election',
+      'comment'
+    ];
+    const genderOptions = ['Male', 'Female', 'Other'];
 
     function escapeHtml(text) {
       if (text === null || text === undefined) return '';
@@ -1420,6 +1436,8 @@
         ass_presiding_iid: '',
         ass_presiding_name: '',
         mobile_number: '',
+        gender: '',
+        disability: '',
         sallery_scale: '',
         current_grade_sallery: '',
         date_of_birth: '',
@@ -1447,27 +1465,13 @@
 
     function renderModalContent(row, isEdit) {
       const modalBody = document.getElementById('modal-body');
-      const fields = [
-        { key: 'ass_presiding_iid', label: 'ass_presiding_iid' },
-        { key: 'ass_presiding_name', label: 'ass_presiding_name' },
-        { key: 'mobile_number', label: 'mobile_number' },
-        { key: 'sallery_scale', label: 'sallery_scale' },
-        { key: 'current_grade_sallery', label: 'current_grade_sallery' },
-        { key: 'date_of_birth', label: 'date_of_birth' },
-        { key: 'own_discrict', label: 'own_discrict' },
-        { key: 'address', label: 'address' },
-        { key: 'Nid_number', label: 'Nid_number' },
-        { key: 'previous_election', label: 'previous_election' },
-        { key: 'gender', label: 'gender' },
-
-        { key: 'comment', label: 'comment' }
-      ];
+      const fieldOrder = buildFieldOrder(row);
 
       if (!isEdit) {
-        const html = fields.map(field => `
+        const html = fieldOrder.map(key => `
           <div class="detail-row">
-            <div class="detail-label">${field.label}:</div>
-            <div class="detail-value">${escapeHtml(row[field.key] ?? 'N/A')}</div>
+            <div class="detail-label">${key}:</div>
+            <div class="detail-value">${escapeHtml(row[key] ?? 'N/A')}</div>
           </div>
         `).join('');
 
@@ -1478,16 +1482,61 @@
         return;
       }
 
-      const html = fields.map(field => `
-        <div class="detail-row">
-          <div class="detail-label">${field.label}:</div>
-          <div class="detail-value">
-            ${field.key === 'ass_presiding_iid' && !isAddMode
-              ? `<div class="detail-value" style="font-weight:700; color:#111827;">${escapeHtml(row[field.key] ?? '')}</div>`
-              : `<input class="detail-input" name="${field.key}" value="${escapeHtml(row[field.key] ?? '')}" ${field.key === 'ass_presiding_iid' && isAddMode ? 'placeholder="Auto-generated"' : ''} />`}
-          </div>
-        </div>
-      `).join('');
+      const html = fieldOrder.map(key => {
+        const val = row[key] ?? '';
+        const readOnlyId = key === 'ass_presiding_iid' && !isAddMode;
+
+        if (key === 'gender') {
+          const options = genderOptions.map(opt => `<option value="${opt}" ${val === opt ? 'selected' : ''}>${opt}</option>`).join('');
+          const extraOpt = val && !genderOptions.includes(val) ? `<option value="${escapeHtml(val)}" selected>${escapeHtml(val)} (existing)</option>` : '';
+          return `
+            <div class="detail-row">
+              <div class="detail-label">${key}:</div>
+              <div class="detail-value">
+                <select class="detail-input" name="${key}">
+                  <option value="" ${val ? '' : 'selected'}>-- Select --</option>
+                  ${options}
+                  ${extraOpt}
+                </select>
+              </div>
+            </div>`;
+        }
+
+        if (key === 'disability') {
+          const yesSelected = val === 'Yes' ? 'selected' : '';
+          const extraOpt = val && val !== 'Yes' ? `<option value="${escapeHtml(val)}" selected>${escapeHtml(val)} (existing)</option>` : '';
+          return `
+            <div class="detail-row">
+              <div class="detail-label">${key}:</div>
+              <div class="detail-value">
+                <select class="detail-input" name="${key}">
+                  <option value="" ${val ? '' : 'selected'}>-- Select --</option>
+                  <option value="Yes" ${yesSelected}>Yes</option>
+                  ${extraOpt}
+                </select>
+              </div>
+            </div>`;
+        }
+
+        if (readOnlyId) {
+          return `
+            <div class="detail-row">
+              <div class="detail-label">${key}:</div>
+              <div class="detail-value" style="font-weight:700; color:#111827;">${escapeHtml(val)}</div>
+            </div>`;
+        }
+
+        const isLongText = key === 'address' || key === 'comment';
+        const inputEl = isLongText
+          ? `<textarea class="detail-input" name="${key}" rows="2">${escapeHtml(val)}</textarea>`
+          : `<input class="detail-input" name="${key}" value="${escapeHtml(val)}" ${key === 'ass_presiding_iid' && isAddMode ? 'placeholder="Auto-generated"' : ''} />`;
+
+        return `
+          <div class="detail-row">
+            <div class="detail-label">${key}:</div>
+            <div class="detail-value">${inputEl}</div>
+          </div>`;
+      }).join('');
 
       modalBody.innerHTML = `
         <form id="edit-form" onsubmit="event.preventDefault(); saveEdit();">
@@ -1508,6 +1557,28 @@
     function cancelEdit() {
       if (!selectedRow) return;
       renderModalContent(selectedRow, false);
+    }
+
+    function buildFieldOrder(rowObj) {
+      const seen = new Set();
+      const keys = Object.keys(rowObj || {});
+      const ordered = [];
+
+      preferredFields.forEach(k => {
+        if (keys.includes(k)) {
+          ordered.push(k);
+          seen.add(k);
+        }
+      });
+
+      keys.forEach(k => {
+        if (!seen.has(k)) {
+          ordered.push(k);
+          seen.add(k);
+        }
+      });
+
+      return ordered;
     }
 
     async function saveEdit() {
