--- a/dashboard.html
+++ b/dashboard.html
@@ -427,6 +427,11 @@
 					<span class="icon">👨‍💻</span>
 					<span>4. Appointment Letter</span>
 				</a>
+
+				<a class="button secondary" href="generate/error_finding.html" title="ট্রেনিং তালিকা">
+					<span class="icon">👨‍💻</span>
+					<span>Error finding</span>
+				</a>
 			</div>
 		</div>
 
