--- a/dashboard.html
+++ b/dashboard.html
@@ -336,12 +336,26 @@
 				font-size: 13px;
 			}
 			
-			.user-info span:last-child {
-				display: none;
+			.user-menu {
+				gap: 10px;
+			}
+
+			.user-info {
+				width: 100%;
+				justify-content: center;
+				background: rgba(255, 255, 255, 0.25);
 			}
 			
+			.action-btn {
+				flex: 1;
+				justify-content: center;
+				padding: 10px;
+			}
+
+			/* Text visibility restored */
+			.user-info span:last-child,
 			.action-btn span:last-child {
-				display: none;
+				display: inline-block;
 			}
 			
 			.main-content {
