--- a/dashboard.html
+++ b/dashboard.html
@@ -446,6 +446,15 @@
 					<span class="icon">👨‍💻</span>
 					<span>Error finding</span>
 				</a>
+				<a class="button secondary" href="generate/5_duty_not_assigned.html" title="ট্রেনিং তালিকা">
+					<span class="icon">👨‍💻</span>
+					<span>Duty Not assigned List</span>
+				</a>
+
+				<a class="button secondary" href="call.html" title="ট্রেনিং তালিকা">
+					<span class="icon">👨‍💻</span>
+					<span>Call</span>
+				</a>
 			</div>
 		</div>
 
