--- a/generate/1_apointment_letter.html
+++ b/generate/1_apointment_letter.html
@@ -311,7 +311,7 @@
                     <span style="font-family:NikoshBAN; color:#c00000;">ভোটকেন্দ্রের নাম ও অবস্থানঃ ${centre.vote_centre_name || 'N/A'}</span>
                 </p>
                 <p style="font-size:12pt; margin-bottom:10px;">
-                    <span style="font-family:NikoshBAN; color:#ff0066;">যে ভোটার এলাকার ভোটারগণ ভোট প্রদান করবেন সে এলাকার নামঃ ${centre.vote_centre_location || 'N/A'}</span>
+                    <span style="font-family:NikoshBAN; color:#ff0066;">যে ভোটার এলাকার ভোটারগণ ভোট প্রদান করবেন সে এলাকার নামঃ ${centre.vote_centre_location || 'N/A'} (পুরুষ বুথ-${toBengaliNumber(centre.voter_both_male || 0)} টি, মহিলা বুথ-${toBengaliNumber(centre.voter_both_female || 0)} টি)</span>
                 </p>
                 <p style="text-align:justify; font-size:10pt; margin-bottom:15px;">
                     <span style="font-family:NikoshBAN;">গণপ্রতিনিধিত্ব আদেশ, 1972 এর অনুচ্ছেদ 9 এর দফা (1খ) কর্তৃক অর্পিত ক্ষমতাবলে, আমি মনিরা হক, জেলা প্রশাসক, ফেনী ও 266, ফেনী-2 নির্বাচনি এলাকার রিটার্নিং অফিসার নিম্নলিখিত ব্যক্তিগণকে উপরোল্লিখিত ভোটকেন্দ্রের জন্য এতদ্বারা প্রিজাইডিং অফিসার, প্রিজাইডিং অফিসারকে সহায়তা দানের জন্য সহকারী প্রিজাইডিং অফিসার এবং পোলিং অফিসার হিসাবে নিয়োগ করিলাম:</span>
